[gd_scene load_steps=2 format=3 uid="uid://bnpft4nwts85b"]

[ext_resource type="Script" uid="uid://hixt18yhvnwt" path="res://scripts/components/range_slider.gd" id="1"]

[node name="RangeSlider" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TrackFill" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.18, 0.5, 0.95, 0.15)

[node name="SelectedRange" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.2, 0.6, 1, 0.4)

[node name="StartHandle" type="Panel" parent="."]
custom_minimum_size = Vector2(4, 40)
layout_mode = 0
offset_right = 4.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="StartHandle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.8, 1, 1)

[node name="EndHandle" type="Panel" parent="."]
custom_minimum_size = Vector2(4, 40)
layout_mode = 0
offset_left = 90.0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="EndHandle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.8, 1, 1)

[node name="CurrentTimeLine" type="ColorRect" parent="."]
custom_minimum_size = Vector2(2, 0)
layout_mode = 0
offset_right = 2.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 0.3, 0.3, 1)
